# meshbot

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  config.example.yaml  devfile.yaml  pyproject.toml
meshbot/: __init__.py  config.py  models.py
meshbot/bot/: __init__.py  agent.py  band_plan.py  commands.py  geocode.py  loop.py  mesh.py  message_store.py  pollen.py  propagation.py  router.py  state_store.py  stats.py  weather.py
meshbot/cli/: __init__.py  mcp_server.py  run.py
meshbot/mcp_server/: __init__.py  server.py
tests/: test_commands.py  test_config.py  test_message_length.py  test_message_store.py  test_multipath.py  test_router.py  test_routes.py  test_state_store.py  test_stats.py  test_traceroute.py
